setup/manifests/ingress-tekton-demo-el.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: tekton-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /tekton-demo
            backend:
              serviceName: el-tekton-demo-el
              servicePort: 8080
